tests/golden/type_errors/map_for_in.err
Type error at 1:5: for-in expects array or range, got map<string, number>
  for item in {"a": 1} {
      ^
